--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,7 +101,7 @@ jobs:
 
       - name: Run tmate
         uses: mxschmitt/action-tmate@v3
-        if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
+        # if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
         with:
          limit-access-to-actor: true
 
@@ -114,33 +114,6 @@ jobs:
         with:
           parallel: true
           flag-name: Python ${{ matrix.python-version }} Unit Test
-
-  publish:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.8'
-
-      - name: Install setup requirements
-        run: |
-          python -m pip install --upgrade setuptools wheel twine
-
-      - name: Build and package
-        run: |
-          python setup.py sdist bdist_wheel
-          twine check dist/*
-
-      - name: Publish package
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
 
   coveralls_finish:
     needs: test
