--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,8 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.10']
-        ckan-version: ["2.10", "2.11"]
-    name: Python ${{ matrix.python-version }} extension test
+        ckan-version: ["2.10", "2.11.0"]
+    name: Python ${{ matrix.python-version }} ckan ${{ matrix.ckan-version }} test
 
     services:
       postgresql:
